tests/NormalTests/paczka1/fuzzy1/79317958.err
Error in line 11: fINV4bhwxLH A643 56,5
